--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ set(CMAKE_CXX_STANDARD 17 CACHE STRING "C++ standard to be used")
 set(CMAKE_CXX_STANDARD_REQUIRED ON CACHE STRING "C++ standard to be used")
 set(CMAKE_CONFIGURATION_TYPES Release Debug CACHE INTERNAL "" FORCE)
 
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -g")
+
 set(CMAKE_POLICY_DEFAULT_CMP0079 NEW)
 
 find_package(TBB CONFIG REQUIRED)
