--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,3 +3,4 @@ cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
 add_subdirectory(test01)
 add_subdirectory(test_static_partitioner)
 add_subdirectory(test_grain_size)
+add_subdirectory(test_grain_size_prefetch)
