more tests for use compile options. upate test result.

--- a/src/test_grain_size/CMakeLists.txt
+++ b/src/test_grain_size/CMakeLists.txt
@@ -8,4 +8,4 @@ add_executable(${target_name1} ${SOURCES})
 target_link_libraries(${target_name1} PRIVATE TBB::tbb)
 target_compile_options(${target_name1} PRIVATE -fno-omit-frame-pointer -fno-optimize-sibling-calls -ggdb)
 
-# target_compile_definitions(${target_name1} PRIVATE CL_TARGET_OPENCL_VERSION=${CL_TARGET_VERSION})
+# target_compile_options(${target_name1} PRIVATE -fprefetch-loop-arrays)
